--- a/hang.html
+++ b/hang.html
@@ -246,6 +246,7 @@
             if(i==tantan.length){
                 document.getElementById("monda").innerHTML="終了<br>正答数："+tantan.length+"問中"+seito+"問"
                 now=0
+                document.getElementById('twitter').style.display="block";
                 return;
             }
             document.getElementById("monda").innerHTML=tango[i]
