--- a/eitan.html
+++ b/eitan.html
@@ -7,8 +7,8 @@
     <meta name="twitter:site" content="なっかのう" />
     <meta name="twitter:title" content="瞬間英単語" />
     <meta name="twitter:description" content="英語力を向上するページです。" />
-    <meta name="twitter:image" content="https://syunkaneitango.herokuapp.com/man.png" />
-    <meta name="twitter:url" content="https://syunkaneitango.herokuapp.com/eitan.html" />
+    <meta name="twitter:image" content="https://flashkorean.herokuapp.com/man.png" />
+    <meta name="twitter:url" content="https://flashkorean.herokuapp.com/eitan.html" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>瞬間英単語</title>
     <style>
