--- a/hang.html
+++ b/hang.html
@@ -8,8 +8,8 @@
     <meta name="twitter:site" content="なっかのう" />
     <meta name="twitter:title" content="瞬間韓単語" />
     <meta name="twitter:description" content="韓国語力を向上するページです。" />
-    <meta name="twitter:image" content="https://syunkaneitango.herokuapp.com/kantan.png" />
-    <meta name="twitter:url" content="https://syunkaneitango.herokuapp.com/hang.html" />
+    <meta name="twitter:image" content="https://flashkorean.herokuapp.com/kantan.png" />
+    <meta name="twitter:url" content="https://flashkorean.herokuapp.com/hang.html" />
     <title>瞬間韓単語</title>
     <style>
     body{
