--- a/eitan.html
+++ b/eitan.html
@@ -249,7 +249,7 @@
         }
         function botan(){
             var num = document.getElementById("level").selectedIndex;
-            openTwitter("☆瞬間英単語☆ レベル"+num+"で"+tantan.length+"問中"+seito+"問正解しました！","https://syunkaneitango.herokuapp.com/eitan.html","瞬間英単語","なっかのう");
+            openTwitter("☆瞬間英単語☆ レベル"+num+"で"+tantan.length+"問中"+seito+"問正解しました！","https://flashkorean.herokuapp.com/eitan.html","瞬間英単語","なっかのう");
         }
     </script>
 </body>
