--- a/hang.html
+++ b/hang.html
@@ -259,7 +259,7 @@
         }
         function botan(){
             var num = document.getElementById("level").selectedIndex;
-            openTwitter("☆瞬間韓単語☆　レベル"+num+"で"+tantan.length+"問中"+seito+"問正解しました！","https://syunkaneitango.herokuapp.com/hang.html","瞬間韓単語","なっかのう");
+            openTwitter("☆瞬間韓単語☆　レベル"+num+"で"+tantan.length+"問中"+seito+"問正解しました！","https://flashkorean.herokuapp.com/hang.html","瞬間韓単語","なっかのう");
         }
     </script>
 </body>
