--- a/eitan.html
+++ b/eitan.html
@@ -151,6 +151,8 @@
                 <option value="2">レベル2(☆1)</option>
                 <option value="3">レベル3(☆1)</option>
                 <option value="4">レベル4(☆1)</option>
+                <option value="5">レベル5(☆1)</option>
+                <option value="6">レベル6(☆1)</option>
                 </select>
                 <input type="button" value="開始する" onclick="kantango();"><br>
                 ※固有名詞以外は小文字から始めてください。ピリオドはつけません。<br>
@@ -185,6 +187,10 @@
         var tantan3=["problem","doctor","I","have","medicine","open","close","please","out","there"]
         var tango4=["〜を打つ、〜を叩く","球、ボール","コーチ","〜できる","〜を許す、理由、言い訳","宿題","授業","報告、〜を報告する","〜を書く、書く","かまわない、すばらしい、元気な"]
         var tantan4=["hit","ball","coach","can","excuse","homework","class","report","write","fine"]
+        var tango5=["やあ、こんにちは","を与える","私に","ジャケット、上着","冷たい、寒い","本当に","空腹で","喉が渇いた","何、どんなもの","朝食"]
+        var tantan5=["hi","give","me","jacket","cold","really","hungry","thirsty","what","breakfast"]
+        var tango6=["卵","とてもいい、偉大な","彼女は","今、現在","すてきな","旅行","家へ、家庭、家庭の","さようなら、別れの挨拶","この、これ","もっと、より多くの"]
+        var tantan6=["egg","great","she","now","nice","trip","home","goodbye","this","more"]
         var tango=[]
         var tantan=[]
         var now = 0
