--- a/eitan.html
+++ b/eitan.html
@@ -153,6 +153,7 @@
                 <option value="4">レベル4(☆1)</option>
                 <option value="5">レベル5(☆1)</option>
                 <option value="6">レベル6(☆1)</option>
+                <option value="6">レベル7(☆1)</option>
                 </select>
                 <input type="button" value="開始する" onclick="kantango();"><br>
                 ※固有名詞以外は小文字から始めてください。ピリオドはつけません。<br>
@@ -191,6 +192,8 @@
         var tantan5=["hi","give","me","jacket","cold","really","hungry","thirsty","what","breakfast"]
         var tango6=["卵","とてもいい、偉大な","彼女は","今、現在","すてきな","旅行","家へ、家庭、家庭の","さようなら、別れの挨拶","この、これ","もっと、より多くの"]
         var tantan6=["egg","great","she","now","nice","trip","home","goodbye","this","more"]
+        var tango7=["了解、わかりました","（電話で）もしもし、こんにちは","あっ、おや、まあ","電話をかける、〜を呼ぶ、電話","〜に感謝する","プレゼント","財布、ハンドバッグ","〜を与える、〜を送る","giveの過去形","giveの過去分詞"]
+        var tantan7=["OK","hello","oh","call","thank","present","purse","give","gave","given"]
         var tango=[]
         var tantan=[]
         var now = 0
