--- a/eitan.html
+++ b/eitan.html
@@ -156,6 +156,7 @@
                 <option value="7">レベル7(☆1)</option>
                 <option value="8">レベル8(☆1)</option>
                 <option value="9">レベル9(☆1)</option>
+                <option value="10">レベル10(☆1)</option>
                 </select>
                 <input type="button" value="開始する" onclick="kantango();"><br>
                 ※固有名詞以外は小文字から始めてください。ピリオドはつけません。<br>
@@ -185,7 +186,7 @@
         var tango1=["午後","再び","年齢、年代","すべての","すでに","〜もまた","アメリカ合衆国","〜と、そして","怒った","りんご"]
         var tantan1=["afternoon","again","age","all","already","also","America","and","angry","apple"]
         var tango2=["質問","インターネット","テレビ","わかりました、もちろん","パパ、お父さん","いくつかの、いくらかの","花","私の","誕生日","かわいらしい、すてきな"]
-        var tantan2=["question","Internet","TV","sure","dad","some","flower","my","birthday","lovely"]
+        var tantan2=["question","internet","TV","sure","dad","some","flower","my","birthday","lovely"]
         var tango3=["問題","医者","私は","持っている","薬","を開く、を始める","を閉める、閉じる、","どうぞ〜（して）ください","外へ、外出して","そこに"]
         var tantan3=["problem","doctor","I","have","medicine","open","close","please","out","there"]
         var tango4=["〜を打つ、〜を叩く","球、ボール","コーチ","〜できる","〜を許す、理由、言い訳","宿題","授業","報告、〜を報告する","〜を書く、書く","かまわない、すばらしい、元気な"]
@@ -200,6 +201,8 @@
         var tantan8=["called","mother","so","work","mine","pizza","super","exciting","is","our"]
         var tango9=["ダンス、踊り","をする、行う、する","バスケットボール","完全に、絶対に","学校","〜の間に","あなたの","才能","いつもは、通常は","漫画、アニメ"]
         var tantan9=["dance","do","basketball","absolutely","school","during","your","talent","usually","cartoon"]
+        var tango10=["暇な、無料の、自由な","コンテスト、競技会","行く、通う","通り","左に","区画、大きな塊、ブロック","右","警察","助ける","眺め、景色、意見、見解"]
+        var tantan10=["free","contest","go","street","left","block","right","polise","help","view"]
         var tango=[]
         var tantan=[]
         var now = 0
