--- a/eitan.html
+++ b/eitan.html
@@ -145,9 +145,9 @@
             <p>
                 レベル選択（左のリストから選択してください。）<br>
                 <select name="league" id="classes" onchange="teamSet()">
-                    <option value="0">=ステージ=</option>
+                    <option value="0">=ステージを選択=</option>
                     <option value="1">Class G</option>
-                    <option value="2">Class F</option>
+                    <option value="2">Class F（準備中）/option>
                 </select>
                 <select id="level">
                 <option value="0">=========</option>
