--- a/eitan.html
+++ b/eitan.html
@@ -147,7 +147,7 @@
                 <select name="league" id="classes" onchange="teamSet()">
                     <option value="0">=ステージを選択=</option>
                     <option value="1">Class G</option>
-                    <option value="2">Class F（準備中）/option>
+                    <option value="2">Class F（準備中）</option>
                 </select>
                 <select id="level">
                 <option value="0">=========</option>
