--- a/hang.html
+++ b/hang.html
@@ -196,7 +196,7 @@
     </div>
     <script>
         var stage_1=new Array(
-            "=stage 1=","レベル1（〜は）","レベル2（名詞1）","レベル3(名詞2)","レベル4(お金)","レベル5(学校)","レベル6(会話)","レベル7(天気)","なし","なし","なし"
+            "=stage 1=","レベル1（〜は）","レベル2（名詞1）","レベル3(名詞2)","レベル4(お金)","レベル5(学校)","レベル6(会話)","レベル7(天気)","レベル8(形容詞1)","なし","なし"
         );
         var tango1=["나는","당신은","그는","그녀는","남자","여자","이것은","그것은","저것은","이름"]
         var tantan1=["私は","あなたは","彼は","彼女は","男","女","これは","それは","あれは","名前"]
@@ -212,6 +212,8 @@
         var tantan6=["味","時間","関心","授業","仕事","本当に","はい","いいえ","約束","ファン"]
         var tango7=["날씨","일기 예보","맑음","비","흐림","눈","태풍","벼락","장마","기온"]
         var tantan7=["天気","天気予報","晴れ","雨","曇り","雪","台風","雷","梅雨","気温"]
+        var tango8=["크다","작다","많다","적다","길다","짧다","높다","낮다","무겁다","가볍다"]
+        var tantan8=["大きい","小さい","多い","少ない","長い","短い","高い","低い","重い","軽い"]
         var tango=[]
         var tantan=[]
         var now = 0
@@ -228,7 +230,7 @@
                     return
             }else{
                     if(now>8){
-                        alert("現在、LV11~未実装です。")
+                        alert("現在、LV9~未実装です。")
                         return;
                     }
                     document.getElementById("box12").style.display = "block";
@@ -293,6 +295,12 @@
             //チーム名のセレクトボックスの選択番号を０にする
             document.getElementById("level").selectedIndex=0;
         }
+        function nextForm(){
+            if(event.keyCode == 13){
+                kaitou();
+            }
+        }
+        window.document.onkeydown = nextForm;
     </script>
 </body>
 </html>
