--- a/eitan.html
+++ b/eitan.html
@@ -201,7 +201,7 @@
         var tantan2=["question","internet","TV","sure","dad","some","flower","my","birthday","lovely"]
         var tango3=["問題","医者","私は","持っている","薬","を開く、を始める","を閉める、閉じる、","どうぞ〜（して）ください","外へ、外出して","そこに"]
         var tantan3=["problem","doctor","I","have","medicine","open","close","please","out","there"]
-        var tango4=["〜を打つ、〜を叩く","球、ボール","コーチ","〜できる","〜を許す、理由、言い訳","宿題","授業","報告、〜を報告する","〜を書く、書く","かまわない、すばらしい、元気な"]
+        var tango4=["〜を打つ、〜を叩く","球、ボール","コーチ","〜できる","〜を許す、理由、言い訳","宿題","授業","レポート、報告、〜を報告する","〜を書く、書く","かまわない、すばらしい、元気な"]
         var tantan4=["hit","ball","coach","can","excuse","homework","class","report","write","fine"]
         var tango5=["やあ、こんにちは","を与える","私に","ジャケット、上着","冷たい、寒い","本当に","空腹で","喉が渇いた","何、どんなもの","朝食"]
         var tantan5=["hi","give","me","jacket","cold","really","hungry","thirsty","what","breakfast"]
@@ -214,9 +214,9 @@
         var tango9=["ダンス、踊り","をする、行う、する","バスケットボール","完全に、絶対に","学校","〜の間に","あなたの","才能","いつもは、通常は","漫画、アニメ"]
         var tantan9=["dance","do","basketball","absolutely","school","during","your","talent","usually","cartoon"]
         var tango10=["暇な、無料の、自由な","コンテスト、競技会","行く、通う","通り","左に","区画、大きな塊、ブロック","右","警察","助ける","眺め、景色、意見、見解"]
-        var tantan10=["free","contest","go","street","left","block","right","polise","help","view"]
+        var tantan10=["free","contest","go","street","left","block","right","police","help","view"]
         var tango11=["暇な、無料の、自由な","コンテスト、競技会","行く、通う","通り","左に","区画、大きな塊、ブロック","右","警察","助ける","眺め、景色、意見、見解"]
-        var tantan11=["free","contest","go","street","left","block","right","polise","help","view"]
+        var tantan11=["free","contest","go","street","left","block","right","police","help","view"]
         var tango=[]
         var tantan=[]
         var now = 0
