--- a/eitan.html
+++ b/eitan.html
@@ -381,7 +381,7 @@
                 //数値に変換できない例外が出た時の処理
                 try
                 {
-                document.write(cnt);
+                document.getElementById("exp").innerHTML=(cnt);
                 
                 //cookieに訪問回数を書き込む
                 document.cookie="counts="+cnt+";";
