--- a/hang.html
+++ b/hang.html
@@ -149,11 +149,11 @@
     </style>
 </head>
 <body>
-    <div class="Header">瞬間韓単語　EXP<span id="exp"></span><a href="eitan.html" class="lin">瞬間英単語へ</a></div>	
+    <div class="Header">瞬間韓単語<a href="eitan.html" class="lin">瞬間英単語へ</a></div>	
     <div class="Contents">	
         <div class="box11">
             <p>
-                レベル選択（左のリストから選択してください。）<br>
+                レベル選択（左のリストから選択してください。）　現在の経験値：<span id="exp"></span><br>
                 <select name="league" id="classes" onchange="teamSet()">
                         <option value="0">=ステージ=</option>
                         <option value="1">ステージ1</option>
