--- a/eitan.html
+++ b/eitan.html
@@ -139,11 +139,11 @@
     </style>
 </head>
 <body>
-    <div class="Header">瞬間英単語<a href="hang.html" class="lin">瞬間韓単語へ</a></div>	
+    <div class="Header">瞬間英単語<a href="hang.html" class="lin">瞬間韓単語</a></div>	
     <div class="Contents">	
         <div class="box11">
             <p>
-                レベル選択（左のリストから選択してください。）　現在の経験値:<span id="exp"></span><br>
+                レベル選択（左のリストから選択してください。）<br>現在の経験値:<span id="exp"></span><br>
                 <select name="league" id="classes" onchange="teamSet()">
                     <option value="0">=ステージを選択=</option>
                     <option value="1">Class G</option>
