--- a/hang.html
+++ b/hang.html
@@ -153,7 +153,7 @@
     <div class="Contents">	
         <div class="box11">
             <p>
-                レベル選択（左のリストから選択してください。）<br>現在の経験値：<span id="exp"></span><br>
+                レベル選択（左のリストから選択してください。）<br><b>現在の経験値：</b><span id="exp"></span><br>
                 <select name="league" id="classes" onchange="teamSet()">
                         <option value="0">=ステージ=</option>
                         <option value="1">ステージ1</option>
