--- a/eitan.html
+++ b/eitan.html
@@ -143,7 +143,7 @@
     <div class="Contents">	
         <div class="box11">
             <p>
-                レベル選択（左のリストから選択してください。）<br><b>現在の経験値:</b><span id="exp"></span><br>
+                レベル選択（左のリストから選択してください。）<br><b>現在の経験値：</b><span id="exp"></span><br>
                 <select name="league" id="classes" onchange="teamSet()">
                     <option value="0">=ステージを選択=</option>
                     <option value="1">Class G</option>
