--- a/hang.html
+++ b/hang.html
@@ -151,7 +151,7 @@
 <body>
     <div class="Header">瞬間韓単語<a href="eitan.html" class="lin">瞬間英単語</a></div>	
     <div class="Contents">	
-        <div class="box11">
+        <div class="box11" id="menubox">
             <p>
                 レベル選択（左のリストから選択してください。）<br><b>現在の経験値：</b><span id="exp"></span><br>
                 <select name="league" id="classes" onchange="teamSet()">
@@ -234,6 +234,7 @@
                         return;
                     }
                     document.getElementById("box12").style.display = "block";
+                    document.getElementById("menubox").style.display = "none";
                     seito=0
                     i=0
                     now=num2*10+num-10
@@ -312,6 +313,7 @@
             if(i==tantan.length){
                 document.getElementById("monda").innerHTML="終了<br>正答数："+tantan.length+"問中"+seito+"問"
                 document.getElementById('twitter').style.display="block";
+                document.getElementById("menubox").style.display = "block";
                 return;
             }
             document.getElementById("monda").innerHTML=tango[i]
