--- a/eitan.html
+++ b/eitan.html
@@ -140,10 +140,15 @@
 </head>
 <body>
     <div class="Header">瞬間英単語<a href="hang.html" class="lin">瞬間韓単語</a></div>	
-    <div class="Contents">	
+    <div class="Contents">
+        <div class="box11">
+            <p>
+                <b>現在の経験値：</b><span id="exp"></span>
+            </p>
+        </div>
         <div class="box11" id="menubox">
             <p>
-                レベル選択（左のリストから選択してください。）<br><b>現在の経験値：</b><span id="exp"></span><br>
+                レベル選択（左のリストから選択してください。）<br><br>
                 <select name="league" id="classes" onchange="teamSet()">
                     <option value="0">=ステージを選択=</option>
                     <option value="1">Class G</option>
