--- a/eitan.html
+++ b/eitan.html
@@ -341,7 +341,7 @@
         }
         function botan(){
             var num = document.getElementById("level").selectedIndex;
-            openTwitter("☆瞬間英単語☆ レベル"+now+"で"+tantan.length+"問中"+seito+"問正解しました！","https://flashkorean.herokuapp.com/eitan.html","瞬間英単語","なっかのう");
+            openTwitter("☆瞬間英単語☆ レベル"+now+"で"+tantan.length+"問中"+seito+"問正解しました！現在の経験値は"+cnt+"です！","https://flashkorean.herokuapp.com/eitan.html","瞬間英単語","なっかのう");
         }
         function teamSet(){
 
