--- a/eitan.html
+++ b/eitan.html
@@ -227,6 +227,9 @@
         var now = 0
         var i=0
         var seito=0
+        var cook;       //cookieデータを格納する変数
+        var cStart,cEnd;  //訪問回数部分を切取る為の位置を格納
+        var cnt;        //訪問回数を格納
         function kantango(){
             now=0
             seito=0
