--- a/hang.html
+++ b/hang.html
@@ -334,7 +334,7 @@
         }
         function botan(){
             var num = document.getElementById("level").selectedIndex;
-            openTwitter("☆瞬間韓単語☆　レベル"+now+"で"+tantan.length+"問中"+seito+"問正解しました！現在の経験値は"+cnt+"です！","https://flashkorean.herokuapp.com/hang.html","瞬間韓単語","なっかのう");
+            openTwitter("☆瞬間韓単語☆　レベル"+now+"で"+tantan.length+"問中"+seito+"問正解しました！現在の経験値は"+parseInt(cnt+seito)+"です！","https://flashkorean.herokuapp.com/hang.html","瞬間韓単語","なっかのう");
         }
         function teamSet(){
 
