--- a/zhong.html
+++ b/zhong.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="なっかのう" />
-    <meta name="twitter:title" content="瞬間英単語" />
-    <meta name="twitter:description" content="英語力を向上するページです。" />
-    <meta name="twitter:image" content="https://flashkorean.herokuapp.com/man.png" />
-    <meta name="twitter:url" content="https://flashkorean.herokuapp.com/eitan.html" />
+    <meta name="twitter:title" content="瞬間中単語" />
+    <meta name="twitter:description" content="中国語力を向上するページです。" />
+    <meta name="twitter:image" content="https://flashkorean.herokuapp.com/zh.png" />
+    <meta name="twitter:url" content="https://flashkorean.herokuapp.com/zhong.html" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>瞬間中単語</title>
     <style>
@@ -325,7 +325,7 @@
         function botan(){
             var num = document.getElementById("level").selectedIndex;
             var keisan = parseInt(cnt)+parseInt(seito)
-            openTwitter("☆瞬間中単語☆ レベル"+now+"で"+tantan.length+"問中"+seito+"問正解しました！現在の経験値は"+keisan+"です！","https://flashkorean.herokuapp.com/eitan.html","瞬間中単語","なっかのう");
+            openTwitter("☆瞬間中単語☆ レベル"+now+"で"+tantan.length+"問中"+seito+"問正解しました！現在の経験値は"+keisan+"です！","https://flashkorean.herokuapp.com/zhong.html","瞬間中単語","なっかのう");
         }
         function teamSet(){
 
