--- a/zhong.html
+++ b/zhong.html
@@ -202,6 +202,8 @@
         );
         var tango1=["〜と呼ぶ","姓を〜という","わたし","〜である、〜です","とても","あなた","あなた（敬称）","はじめまして、こんにちは","さようなら","文末につけて「〜か？」"]
         var tantan1=["叫","姓","我","是","很","你","您","你好","再见","吗"]
+        var tango2=["とても","おいしい","暑い","寒い","今日","彼","彼女","アイスクリーム","これ、この","あれ、あの"]
+        var tantan2=["非常","好吃","热","冷","今天","他","她","冰淇淋","这个","那个"]
         var tango=[]
         var tantan=[]
         var now = 0
@@ -221,7 +223,7 @@
                     return
             }else{
                     now=num2*10+num-10
-                    if(now>1){
+                    if(now>2){
                         alert("現在、LV2~未実装です。")
                         return;
                     }
