--- a/eitan.html
+++ b/eitan.html
@@ -352,7 +352,7 @@
         function botan(){
             var num = document.getElementById("level").selectedIndex;
             var keisan = String(parseInt(cnt)+parseInt(seito))
-            openTwitter("☆瞬間英単語☆ レベル"+now+"で"+tantan.length+"問中"+seito+"問正解しました！現在の経験値は"+keisan+"です！","https://flashkorean.herokuapp.com/eitan.html","瞬間英単語","なっかのう");
+            openTwitter("☆瞬間英単語☆ 問題No."+now+"で"+tantan.length+"問中"+seito+"問正解しました！現在の経験値は"+keisan+"です！","https://flashkorean.herokuapp.com/eitan.html","瞬間英単語","なっかのう");
         }
         function teamSet(){
 
